# swc-pyclub-tdd

./: .gitignore  README.md  index.html  pyproject.toml  slides.md
.github/workflows/: ci.yml
src/: roman.py
tests/: test_roman.py
