[project]
name = "swc-pyclub-tdd"
description = "Slides and a toy examples for test-driven development."
version = "0.1.0"
authors = [
    { name = "Sam Cunliffe", email = "s.cunliffe@ucl.ac.uk" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-coverage"]

[tool.coverage]
report = {skip_covered = true, sort = "cover"}
run = {branch = true, parallel = true, source = ["example"]}
paths.source = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
